syntax = "proto3";

option csharp_namespace = "TestGrpcStream.Client";

package mkStream;

service MKStream {
  rpc HelloStream (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string method = 1;
}

message HelloReply {
  string message = 1;
}
